--- a/app/templates/admin/pregunta.html
+++ b/app/templates/admin/pregunta.html
@@ -1,4 +1,4 @@
-{% extends 'base/base-gerente.html'%}
+{% extends 'base/base-admin.html'%}
 {% block content %}
 <!-- Registrar Oficina-->
 <div class="modal fade" id="modalPregunta" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
