--- a/app/templates/admin/tipo-moneda.html
+++ b/app/templates/admin/tipo-moneda.html
@@ -1,4 +1,4 @@
-{% extends 'base/base-gerente.html'%}
+{% extends 'base/base-admin.html'%}
 {% block content %}
 <!-- Registrar Moneda-->
 <div class="modal fade" id="modalMoneda" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
