--- a/app/templates/base/base-admin.html
+++ b/app/templates/base/base-admin.html
@@ -1,4 +1,3 @@
-
 {%extends "base/base.html"%}
 {%block contenido%}
     <div id="page-top">
@@ -40,15 +39,52 @@
                     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapse1"
                         aria-expanded="true" aria-controls="collapse1">
                         <i class="fas fa-fw fa-bars"></i>
-                        <span>Consultas</span>
+                        <span>Usuarios</span>
                     </a>
                     <div id="collapse1" class="collapse" aria-labelledby="headingTwo"
                         data-parent="#accordionSidebar">
                         <div class="bg-white py-2 collapse-inner rounded">
                             <h6 class="collapse-header">Acciones</h6>
                            
-                            <a class="collapse-item" href="/consultar-guia">Guias De Remision</a>
-                            <a class="collapse-item" href="/consultar-factura">Facturas</a>
+                            <a class="collapse-item" href="/persona">Personas</a>
+                            <a class="collapse-item" href="/pregunta">Preguntas de Seguridad</a>
+
+                        </div>
+                    </div>
+                </li>
+
+                <!-- Nav Item - Pages Collapse Menu -->
+                <li class="nav-item">
+                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapse2"
+                        aria-expanded="true" aria-controls="collapse2">
+                        <i class="fas fa-fw fa-bars"></i>
+                        <span>Empresa</span>
+                    </a>
+                    <div id="collapse2" class="collapse" aria-labelledby="headingTwo"
+                        data-parent="#accordionSidebar">
+                        <div class="bg-white py-2 collapse-inner rounded">
+                            <h6 class="collapse-header">Acciones</h6>
+                           
+                            <a class="collapse-item" href="/oficina">Oficinas</a>
+                            <a class="collapse-item" href="/cargo">Cargos</a>
+
+                        </div>
+                    </div>
+                </li>
+
+                <!-- Nav Item - Pages Collapse Menu -->
+                <li class="nav-item">
+                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapse3"
+                        aria-expanded="true" aria-controls="collapse3">
+                        <i class="fas fa-fw fa-bars"></i>
+                        <span>Parametros</span>
+                    </a>
+                    <div id="collapse3" class="collapse" aria-labelledby="headingTwo"
+                        data-parent="#accordionSidebar">
+                        <div class="bg-white py-2 collapse-inner rounded">
+                            <h6 class="collapse-header">Acciones</h6>
+                           
+                            <a class="collapse-item" href="/tipo-moneda">Tipo de Moneda</a>
 
                         </div>
                     </div>
