--- a/app/templates/secretaria/cliente.html
+++ b/app/templates/secretaria/cliente.html
@@ -1,4 +1,4 @@
-{% extends 'base/base-gerente.html'%} 
+{% extends 'base/base-secretaria.html'%} 
 {% block content %}
 
 <!-- DataTales Example -->
