--- a/app/templates/secretaria/guia.html
+++ b/app/templates/secretaria/guia.html
@@ -1,4 +1,4 @@
-{% extends 'base/base-gerente.html'%} {% block content %}
+{% extends 'base/base-secretaria.html'%} {% block content %}
 
 {%if factura%}
 <div class="card border-left-primary shadow h-100 ">
