--- a/app/templates/user/change-password.html
+++ b/app/templates/user/change-password.html
@@ -1,4 +1,21 @@
-{% extends 'base/base-gerente.html'%}
+
+
+{% if session['usuario'].id_cargo==1 %}
+
+    {% extends 'base/base-gerente.html'%}
+
+{% elif session['usuario'].id_cargo==2 %}
+
+    {% extends 'base/base-secretaria.html'%}
+    
+{% elif session['usuario'].id_cargo==3 %}
+
+    {% extends 'base/base-admin.html'%}
+
+{% endif %}
+
+
+
 {% block content %}
 <div class="card border-left-primary shadow w-75">
     <div class="card-body">
