--- a/app/templates/base/base-secretaria.html
+++ b/app/templates/base/base-secretaria.html
@@ -1,4 +1,3 @@
-
 {%extends "base/base.html"%}
 {%block contenido%}
     <div id="page-top">
@@ -40,16 +39,36 @@
                     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapse1"
                         aria-expanded="true" aria-controls="collapse1">
                         <i class="fas fa-fw fa-bars"></i>
-                        <span>Consultas</span>
+                        <span>Clientes</span>
                     </a>
                     <div id="collapse1" class="collapse" aria-labelledby="headingTwo"
                         data-parent="#accordionSidebar">
                         <div class="bg-white py-2 collapse-inner rounded">
                             <h6 class="collapse-header">Acciones</h6>
                            
-                            <a class="collapse-item" href="/consultar-guia">Guias De Remision</a>
-                            <a class="collapse-item" href="/consultar-factura">Facturas</a>
+                            <a class="collapse-item" href="/cliente">Cliente</a>
+                            <a class="collapse-item" href="/transportista">Transportista</a>
+                            <a class="collapse-item" href="/vehiculo">Vehiculo</a>
 
+                        </div>
+                    </div>
+                </li>
+
+                <!-- Nav Item - Pages Collapse Menu -->
+                <li class="nav-item">
+                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapse2"
+                        aria-expanded="true" aria-controls="collapse2">
+                        <i class="fas fa-fw fa-bars"></i>
+                        <span>Guias</span>
+                    </a>
+                    <div id="collapse2" class="collapse" aria-labelledby="headingTwo"
+                        data-parent="#accordionSidebar">
+                        <div class="bg-white py-2 collapse-inner rounded">
+                            <h6 class="collapse-header">Acciones</h6>
+                           
+                            <a class="collapse-item" href="/motivo-traslado">Motivo de Traslado</a>
+                            <a class="collapse-item" href="/factura">Factura</a>
+                            <a class="collapse-item" href="/guia">Guia de Remision</a>
                         </div>
                     </div>
                 </li>
