--- a/app/templates/secretaria/vehiculo.html
+++ b/app/templates/secretaria/vehiculo.html
@@ -1,4 +1,4 @@
-{% extends 'base/base-gerente.html'%} {% block content %}
+{% extends 'base/base-secretaria.html'%} {% block content %}
 
 <!-- DataTales Example -->
 <div class="card shadow mb-4">
