add: secretaria menus ok

--- a/app/templates/macros/_guia.html
+++ b/app/templates/macros/_guia.html
@@ -54,9 +54,7 @@
                         Punto de Partida :
                     </div>
                     <div class="col">
-                        {{guia.oficina.direccion}} - {{guia.oficina.distrito.nombre_distrito}} -
-                        {{guia.oficina.distrito.provincia.nombre_provincia}} -
-                        {{guia.oficina.distrito.provincia.departamento.nombre_departamento}}
+                        {{guia.oficina.direccion}}
                     </div>
                 </div>
 
