fin: bug de menu

--- a/app/templates/gerente/consultar-guia.html
+++ b/app/templates/gerente/consultar-guia.html
@@ -1,4 +1,6 @@
-{% extends 'base/base-gerente.html'%} {% block content %}
+{% extends 'base/base-gerente.html'%} 
+
+{% block content %}
 
 {%if factura%}
 <div class="card border-left-primary shadow h-100 ">
